@@ -105,7 +105,7 @@ jobs:
       run: |
         /opt/hbpk/harbour/bin/linux/zig/hbtest
 
-    - name: Build debug version of Harbour core
+    - name: Build debug version(s) of Harbour core
       run: |
         export PATH="/opt/hbpk/bin:/opt/hbpk/harbour/bin/linux/zig:$PATH"
         if [ ! -d "packages-x86_64-linux-musl-last" ]; then
@@ -115,7 +115,11 @@ jobs:
           cd harbour-*
           HB_COMPILER=zig make clean
           cd ..
-          PKGSELECTION=harbour-core-debug make install
+          HBPK_BLD_SUFFIX=+sanitizer PKGSELECTION=harbour-core-debug make install
+          cd harbour-*
+          HB_COMPILER=zig make clean
+          cd ..
+          HBPK_USER_CFLAGS=-fno-sanitize-trap=undefined PKGSELECTION=harbour-core-debug make install
         fi
 
     - name: Rename artifacts
