@@ -160,7 +160,7 @@ jobs:
           " \
         make install
 
-    - name: Build debug version of Harbour core
+    - name: Build debug version(s) of Harbour core
       shell: msys2 {0}
       run: |
         export PATH="/opt/hbpk/bin:/opt/hbpk/harbour/bin/win/zig:$PATH"
@@ -171,7 +171,11 @@ jobs:
           cd harbour-*
           HB_COMPILER=zig make clean
           cd ..
-          PKGSELECTION=harbour-core-debug make install
+          HBPK_BLD_SUFFIX=+sanitizer PKGSELECTION=harbour-core-debug make install
+          cd harbour-*
+          HB_COMPILER=zig make clean
+          cd ..
+          HBPK_USER_CFLAGS=-fno-sanitize-trap=undefined PKGSELECTION=harbour-core-debug make install
         fi
 
     - name: Rename artifacts
